# paimen

./: .gitignore  CMakeLists.txt  package.ps1  xmake.lua
deploy/: 使用说明.txt
src/: MainWindow.cpp  MainWindow.h  MiniWindow.cpp  MiniWindow.h  PomodoroTimer.cpp  PomodoroTimer.h  main.cpp
src/core/: AppConfig.cpp  AppConfig.h  ITimerStrategy.cpp  ITimerStrategy.h  Timer.cpp  Timer.h
src/services/: RecordService.cpp  RecordService.h
src/ui/: MainWindow.cpp  MainWindow.h  MiniWindow.cpp  MiniWindow.h  StyledMenu.cpp  StyledMenu.h
